--- a/templates/partials/MovementHud.hbs
+++ b/templates/partials/MovementHud.hbs
@@ -7,5 +7,15 @@
 			<span class="movement-space"></span>
 			<span class="movement-space"></span>
 		</div>
-		<div class="movement-text"><span class="movement-current">6</span> <i class="fas fa-cube"></i><br/> {{hudData.settings.localize.of}} <span class="movement-max">6</span></div>
+		<div class="movement-text">
+			<div>
+				<span class="movement-current">6 </span>
+				{{#if movementIcon}}
+					<img src={{movementIcon}}></img>
+				{{else}}
+					<i class="fas fa-cube"></i>
+				{{/if}}
+			</div>
+			<br/> {{hudData.settings.localize.of}} <span class="movement-max">6</span>
+		</div>
 	</div>
